--- a/views/footer.html
+++ b/views/footer.html
@@ -8,8 +8,8 @@
 	    <a href="http://code.tutsplus.com/tutorials/building-a-web-app-from-scratch-in-angularjs--net-32944" target="_blank">Inspration of this project |</a>
 	    <a href="http://joelhooks.com/blog/2013/04/24/modeling-data-and-state-in-your-angularjs-application/" target="_blank">Data modeling |</a>
 	    <a href="http://slides.wesalvaro.com/20121113/#/3" target="_blank">Tutorial slideshow |</a>
-	    <a href="http://www.nganimate.org/angularjs/tutorial/how-to-make-animations-with-angularjs" target="_blank">Animation tutorial</a>
-	    <a href="http://www.infoq.com/research/top-javascript-mvc-frameworks" target="_blank">Top JavaScript MVC Frameworks</a>
+	    <a href="http://www.nganimate.org/angularjs/tutorial/how-to-make-animations-with-angularjs" target="_blank">Animation tutorial |</a>
+	    <a href="http://www.infoq.com/research/top-javascript-mvc-frameworks" target="_blank">Top JavaScript MVC Frameworks |</a>
 	    <a href="http://voidcanvas.com/why-angularjs-is-generally-better-than-emberjs-and-backbonejs/" target="_blank">Angular vs Ember vs Backbone</a>
 	  </div>
 	</div>
